src/app/shared/components/header/header.component.scss
.header {
  padding: 20px 0;
  // transition: 0.3s ease all;
  // z-index: 999999;
  // position: relative;
  // .logo {
  //   filter: brightness(32);
  // }
  // .c-p {
  //   filter: brightness(32);
  // }
}
.mobile-menu {
  display: none;
}
.blueheader {
  background: linear-gradient(117deg, #009eff 0%, #27c3d0 100%);
}

.navigation__checkbox {
  display: none;
}
.white-logo {
  position: relative;
  z-index: 999;
}

.navigation__button {
  background-color: #fff;
  height: 7rem;
  width: 7rem;
  position: fixed;
  top: 30px;
  right: 6rem;
  border-radius: 50%;
  z-index: 2000;
  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
  text-align: center;
  cursor: pointer;
}
@media only screen and (max-width: 56.25em) {
  .navigation__button {
    top: 4rem;
    right: 4rem;
  }
}
@media only screen and (max-width: 37.5em) {
  .navigation__button {
    top: 3rem;
    right: 3rem;
  }
}

.navigation__background {
  height: 6rem;
  width: 6rem;
  border-radius: 50%;
  position: fixed;
  top: 30px;
  right: 6.5rem;
  background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
  z-index: 1000;
  transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
}
@media only screen and (max-width: 56.25em) {
  .navigation__background {
    top: 4.5rem;
    right: 4.5rem;
  }
}
@media only screen and (max-width: 37.5em) {
  .navigation__background {
    top: 3.5rem;
    right: 3.5rem;
  }
}

.navigation__nav {
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1500;
  opacity: 0;
  width: 0;
  transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
  visibility: hidden;
}

.navigation__list {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  list-style: none;
  text-align: center;
  width: 100%;
}

.navigation__item {
  margin: 1rem;
}

.navigation__link:link,
.navigation__link:visited {
  display: inline-block;
  font-size: 3rem;
  font-weight: 300;
  padding: 1rem 2rem;
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
  background-image: linear-gradient(
    120deg,
    transparent 0%,
    transparent 50%,
    #fff 50%
  );
  background-size: 220%;
  transition: all 0.4s;
}
.navigation__link:link span,
.navigation__link:visited span {
  margin-right: 1.5rem;
  display: inline-block;
}

.navigation__link:hover,
.navigation__link:active {
  background-position: 100%;
  color: #009eff;
  transform: translateX(1rem);
}

.navigation__checkbox:checked ~ .navigation__background {
  transform: scale(80);
}

.navigation__checkbox:checked ~ .navigation__nav {
  opacity: 1;
  width: 100%;
  visibility: visible;
}

.navigation__icon {
  position: relative;
  margin-top: 3.5rem;
}
.navigation__icon,
.navigation__icon::before,
.navigation__icon::after {
  width: 3rem;
  height: 2px;
  background-color: #333;
  display: inline-block;
}
.navigation__icon::before,
.navigation__icon::after {
  content: "";
  position: absolute;
  left: 0;
  transition: all 0.2s;
}
.navigation__icon::before {
  top: -0.8rem;
}
.navigation__icon::after {
  top: 0.8rem;
}

.navigation__button:hover .navigation__icon::before {
  top: -1rem;
}

.navigation__button:hover .navigation__icon::after {
  top: 1rem;
}

.navigation__checkbox:checked + .navigation__button .navigation__icon {
  background-color: transparent;
}

.navigation__checkbox:checked + .navigation__button .navigation__icon::before {
  top: 0;
  transform: rotate(135deg);
}

.navigation__checkbox:checked + .navigation__button .navigation__icon::after {
  top: 0;
  transform: rotate(-135deg);
}
.main-menu {
  transition: 0.3s ease all;
  .whitemenu {
    li {
      a {
        color: #fff;
      }
    }
  }
  ul {
    display: flex;
    list-style-type: none;
    padding: 0;
    margin: 0;
    li {
      position: relative;
      padding: 0 20px;
      a {
        color: #111010;
        font-size: 20px;
        font-weight: 600;
        line-height: 24px;
        text-align: right;
        display: block;

        &:hover {
          text-decoration: none;
          .dropdown-menu {
            visibility: visible;
            opacity: 1 !important;
          }
        }
      }
      .dropdown-menu {
        display: block !important;
        position: absolute;
        left: 0;
        right: 0;
        width: fit-content;
        padding: 10px !important;
        top: 41px;
        min-width: 220px;
        background: #ffffff;
        box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.08);
        border: 0;
        transform: translateX(-40px);
        opacity: 0;
        visibility: hidden;
        transition: 0.3s ease all;
        &::after {
          content: "";
          top: -9px;
          left: 0;
          right: 0;
          width: 0;
          height: 0;
          border-left: 10px solid transparent;
          border-right: 10px solid transparent;
          border-bottom: 10px solid #ffffff;
          position: absolute;
          margin: 0 auto;
        }
        li {
          a {
            color: #262332;
            font-size: 16px;
            font-weight: 600;
            line-height: 30px;
            margin: 10px 0;
            text-align: left;
          }
        }
      }
      &:hover {
        .dropdown-menu {
          visibility: visible;
          opacity: 1 !important;
        }
      }
    }
  }
}
.open-menu {
  position: relative;
  top: 6px;
}
.open-menu-white {
  top: 0;
  width: 15px;
}
.side-menu {
  position: relative;
  z-index: 9999;
}
.white-menu {
  filter: brightness(25);
}
header.scrolling_up {
  background-color: #fff;
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  padding: 10px;
  z-index: 999999;
}

// ****************media query***********************
@media screen and (max-width: 1700px) {
  .menu {
    .close-menu {
      width: 25px;
    }
  }
}
@media screen and (max-width: 1200px) {
  .side-menu {
    img {
      max-width: none;
      width: 32px;
    }
    .open-menu-white {
      width: 18px;
    }
  }
  .open-menu {
    max-width: none;
    width: 17px;
  }
}

@media screen and (max-width: 767px) {
  .desktop-menu {
    display: none;
  }
  .mobile-menu {
    display: block;
  }
  .side-menu img {
    position: relative;
    top: -41px;
    width: 82%;
  }
  .main-menu {
    background: #1ab7e1;
    width: 100%;
    top: 10px;
    // border-bottom: 1px solid #ffffff66;
    ul {
      flex-direction: column;
      padding: 10px;
      li {
        a {
          text-align: center;
          color: black;
          font-size: 17px;
          padding: 5px;
          &:hover {
            color: #fff;
          }
        }
        .dropdown-menu {
          left: 41%;
          top: 54px;
        }
      }
    }
    .whitemenu {
      li {
        a {
          &:hover {
            color: #000;
          }
        }
      }
    }
  }
}

